[project]
name = "cvsx"
version = "0.0.1"
authors = [
  { name="Sam Lishak", email="sam.lishak.21@ucl.ac.uk" },
]
description = "Cardiovascular system models in JAX with Diffrax"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE.md"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "diffrax~0.4.1",
    "equinox~0.10.11",
    "numpy~1.25.2",
    "scipy~1.11.1",
    "plotly~5.15.0",
    "kaleido~0.2.1",
    "matplotlib~3.7.2",
    "pypdf~3.15.0",
]

[project.optional-dependencies]
dev = [
    "black~23.3.0",
    "pytest~7.3.1",
]
estimation = [
    "optax~0.1.7",
    "jaxopt~0.7",
    "wfdb~4.1.2",
]

[project.urls]
"Homepage" = "https://github.com/slishak/cvsx"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cvsx"]

[tool.black]
line-length = 100
target-version = ['py310']